--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,8 +49,8 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-# default = ["cpu", "autograd", "macro"]
-default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
+default = ["cpu", "autograd", "macro"]
+# default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
