--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=tru
 libm = { version="0.2.6", optional = true }
 
 ash = { version = "0.37", optional = true } 
-naga = { version = "0.14", features = ["wgsl-in", "spv-out"], optional = true } 
+naga = { version = "0.19", features = ["wgsl-in", "spv-out"], optional = true } 
 
 half = {version = "2.3", default-features = false, optional = true} 
 
@@ -49,7 +49,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["opencl", "lazy"]
+default = ["opencl", "lazy", "nnapi"]
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
 cpu = []
