--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ futures-intrusive = {version="0.5.0", optional=true}
 pollster = {version="0.3", optional=true }
 wgpu = {version="0.15", optional=true }
 
-custos-macro = {path = "../custos-macro", optional=true}
-#custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=true}
+# custos-macro = {path = "../custos-macro", optional=true}
+custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=true}
 #custos-macro = {version = "0.1.1", optional=true}
 
 # no-std float math
@@ -59,8 +59,8 @@ nnapi = ["dep:nnapi", "dep:ndk-sys"]
 
 [dev-dependencies]
 #criterion = "0.3"
-#custos-macro = {git = "https://github.com/elftausend/custos-macro"}
-custos-macro = {path = "../custos-macro"}
+custos-macro = {git = "https://github.com/elftausend/custos-macro"}
+# custos-macro = {path = "../custos-macro"}
 #custos-macro = {version = "0.1.1"}
 naga = {version="0.13.0", default-features=false, features = ["wgsl-in", "spv-out"]}
 ash = { version="0.37" }
