--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ rust-version = "1.65"
 [dependencies]
 #cuwanto-client = { path = "../cuwanto/cuwanto-client", optional = true }
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-#min-cl = { version = "0.2.0", optional=true }
-min-cl = { path="../min-cl", optional=true }
+min-cl = { version = "0.3.0", optional=true }
+# min-cl = { path="../min-cl", optional=true }
 
 # WGPU deps
 futures-intrusive = {version="0.5.0", optional=true}
@@ -34,8 +34,8 @@ nnapi = { path = "../nnapi/nnapi", optional = true }
 ndk-sys = {version = "0.4", features=["test"], optional = true}
 
 [build-dependencies]
-min-cl = { path="../min-cl", optional=true }
-#min-cl = { version = "0.2.0", optional=true }
+# min-cl = { path="../min-cl", optional=true }
+min-cl = { version = "0.3.0", optional=true }
 
 [features]
 #default = ["no-std"]
