--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,10 @@ custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=tru
 # no-std float math
 libm = { version="0.2.6", optional = true }
 
-ash = { version = "0.37", optional = true } 
-naga = { version = "0.19", features = ["wgsl-in", "spv-out"], optional = true } 
+ash = { version = "0.37", optional = true }
+naga = { version = "0.19", features = ["wgsl-in", "spv-out"], optional = true }
 
-half = {version = "2.3", default-features = false, optional = true} 
+half = {version = "2.3", default-features = false, optional = true}
 
 # nnapi
 # nnapi = { path = "../nnapi/nnapi", optional = true}
@@ -49,7 +49,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "graph", "opencl", "autograd"]
+default = ["cpu", "opencl"]
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
 std = []
