--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,8 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "graph", "opencl", "cached"]
+default = ["cpu", "graph", "cached", "autograd"]
+# default = []
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
 std = []
